Thesis/force-app/main/default/objects/Product__c/fields/CostOneUnit__c.field-meta.xml
<CustomField>
    <fullName>CostOneUnit__c</fullName>
    <label>Cost for one unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>