Thesis/force-app/main/default/objects/Product__c/fields/Delivery_detail__c.field-meta.xml
<CustomField>
    <fullName>Delivery_detail__c</fullName>
    <label>Delivery detail</label>
    <referenceTo>DeliveryDetails__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>