Thesis/force-app/main/default/objects/Product__c/fields/ProductAmount__c.field-meta.xml
<CustomField>
    <fullName>ProductAmount__c</fullName>
    <label>Product amount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>