Thesis/force-app/main/default/objects/Product__c/fields/ProductsTotalCost__c.field-meta.xml
<CustomField>
    <fullName>ProductsTotalCost__c</fullName>
    <formula>CostOneUnit__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products total cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>