Thesis/force-app/main/default/objects/Product__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <label>Quantity Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>kilograms</fullName>
            </value>
            <value>
                <fullName>grams</fullName>
            </value>
            <value>
                <fullName>miligrams</fullName>
            </value>
            <value>
                <fullName>piece</fullName>
            </value>
            <value>
                <fullName>liters</fullName>
            </value>
            <value>
                <fullName>milliliters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>