Thesis/force-app/main/default/objects/Product__c/recordTypes/Clothing.recordType-meta.xml
<RecordType>
    <fullName>Clothing</fullName>
    <active>true</active>
    <label>Clothing</label>
</RecordType>