Thesis/force-app/main/default/objects/Product__c/recordTypes/Food.recordType-meta.xml
<RecordType>
    <fullName>Food</fullName>
    <active>true</active>
    <label>Food</label>
</RecordType>