Thesis/force-app/main/default/objects/Product__c/recordTypes/Supplements.recordType-meta.xml
<RecordType>
    <fullName>Supplements</fullName>
    <active>true</active>
    <label>Supplements</label>
</RecordType>