Thesis/force-app/main/default/objects/Product__c/recordTypes/Toys.recordType-meta.xml
<RecordType>
    <fullName>Toys</fullName>
    <active>true</active>
    <label>Toys</label>
</RecordType>